--- a/site/index.html
+++ b/site/index.html
@@ -3,9 +3,9 @@
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<title>H</title>
+	<title>Where am I?</title>
 </head>
 <body>
-<h1>Hello Coursera</h1>
+<h1>Hello Coursera. We're entering the Twilight Zone!</h1>
 </body>
 </html>
